# sysmon-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
common/src/: lib.rs
sysmon-km/: Cargo.toml  DriverCertificate.cer  Makefile.toml
sysmon-km/.cargo/: config.toml
sysmon-km/src/: lib.rs
sysmon-um/: Cargo.toml  Makefile.toml
sysmon-um/src/: error_msg.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
