[package]
name = "sysmon-client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

[dependencies.windows]
version = "0.52"
features = [

]

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
]